# vista-sdk

./: .gitignore
cpp/: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cpp/benchmark/: BM_CodebooksLookup.cpp  BM_GmodLoad.cpp  BM_GmodPathParse.cpp  BM_GmodTraversal.cpp  BM_GmodVersioningConvertPath.cpp  BM_StringBuilder.cpp  BM_VISCacheEfficiency.cpp  CMakeLists.txt  README.md
cpp/benchmark/codebooks/: BM_CodebooksLookup.cpp
cpp/benchmark/gmod/: BM_GmodLoad.cpp  BM_GmodLookup.cpp  BM_GmodPathParse.cpp  BM_GmodTraversal.cpp  BM_GmodVersioningConvertPath.cpp
cpp/benchmark/transport/: BM_DataChannelListSerialization.cpp  BM_TimeSeriesDataSerialization.cpp
cpp/cmake/: CompilersSettings.cmake  Config.cmake  Dependencies.cmake  Sources.cmake  dnv-vista-cpp-config.cmake.in  dnv-vista-sdk-cpp-config.cmake.in  dnvVistaCppBuildConfig.cmake  dnvVistaCppCompilersSettings.cmake  dnvVistaCppConfig.cmake  dnvVistaCppDependencies.cmake  dnvVistaCppInstall.cmake  dnvVistaCppPackaging.cmake  dnvVistaCppSources.cmake  dnvVistaCppSummary.cmake  dnvVistaSdkCppBuildConfig.cmake  dnvVistaSdkCppDependencies.cmake  dnvVistaSdkCppEmbeddedResources.cmake  dnvVistaSdkCppEmbeddedSchemas.cmake  dnvVistaSdkCppEmbeddedTestData.cmake  dnvVistaSdkCppISO19848VersionsGenerator.cmake  dnvVistaSdkCppInstall.cmake  dnvVistaSdkCppPackaging.cmake  dnvVistaSdkCppResourceGenerator.cmake  dnvVistaSdkCppSources.cmake  dnvVistaSdkCppTargets.cmake  dnvVistaSdkCppVersion.rc.in  dnvVistaSdkCppVisVersionsGenerator.cmake
cpp/doc/: CMakeLists.txt
cpp/licenses/: LICENSE-nfx-resource
cpp/samples/: CMakeLists.txt  README.md  Sample_Codebooks.cpp  Sample_DataChannelList.cpp  Sample_Gmod.cpp  Sample_GmodPath.cpp  Sample_GmodVersioning.cpp  Sample_ISO19848.cpp  Sample_ImoNumber.cpp  Sample_LocalId.cpp  Sample_Locations.cpp  Sample_Queries.cpp  Sample_TimeSeriesData.cpp  Sample_UniversalId.cpp
cpp/samples/advanced/: Sample_GmodSubset.cpp  Sample_Queries.cpp  Sample_SensorDataFlow.cpp
cpp/samples/basic/: Sample_BasicUsage.cpp  Sample_Codebooks.cpp  Sample_GMOD.cpp  Sample_LocalId.cpp  Sample_LocalId_Validator.cpp
cpp/samples/builders/: Sample_Builders_LocalId.cpp  Sample_Builders_LocalIdQuery.cpp
cpp/samples/core/: Sample_GmodPath.cpp  Sample_Locations.cpp
cpp/samples/gmod/: Sample_Gmod.cpp  Sample_Gmod_Tree.cpp
cpp/samples/identifiers/: Sample_ImoNumber.cpp  Sample_UniversalId.cpp
cpp/samples/iso19848/: Sample_ISO19848_AdvancedDataChannelList.cpp  Sample_ISO19848_SimpleDataChannelList.cpp  Sample_TimeSeriesDataPackage.cpp
cpp/samples/parse/: Sample_Parse_GmodPath.cpp  Sample_Parse_LocalId.cpp  Sample_Parse_MetadataTag.cpp
cpp/samples/transport/: Sample_DataChannelList.cpp  Sample_TimeSeriesData.cpp
cpp/samples/versioning/: Sample_Versioning_GmodNode.cpp  Sample_Versioning_GmodPath.cpp  Sample_Versioning_LocalId.cpp
cpp/samples/vis/: Sample_VIS_Gmod.cpp
cpp/src/: Codebook.cpp  CodebookName.cpp  Codebooks.cpp  CodebooksDto.cpp  EmbeddedResource.cpp  Exceptions.cpp  Gmod.cpp  GmodDto.cpp  GmodNode.cpp  GmodPath.cpp  GmodPathQuery.cpp  GmodVersioning.cpp  GmodVersioningDto.cpp  ImoNumber.cpp  LocalId.cpp  LocalIdBuilder.cpp  LocalIdItems.cpp  LocalIdQuery.cpp  LocationBuilder.cpp  Locations.cpp  LocationsDto.cpp  MetadataTag.cpp  MetadataTagsQuery.cpp  ParsingErrors.cpp  UniversalId.cpp  UniversalIdBuilder.cpp  VIS.cpp
cpp/src/EmbeddedResources/: EmbeddedResources.cpp  EmbeddedResources.h
cpp/src/EmbeddedSchemas/: EmbeddedSchemas.cpp  EmbeddedSchemas.h
cpp/src/EmbeddedTestData/: EmbeddedTestData.cpp  EmbeddedTestData.h
cpp/src/SDK/: Codebook.cpp  Codebooks.cpp  Gmod.cpp  GmodNode.cpp  GmodPath.cpp  GmodPathQuery.cpp  ImoNumber.cpp  LocalId.cpp  LocalIdBuilder.cpp  LocalIdQuery.cpp  LocationBuilder.cpp  Locations.cpp  MetadataTagsQuery.cpp  ParsingErrors.cpp  UniversalId.cpp  UniversalIdBuilder.cpp  VIS.cpp
cpp/src/SourceGenerators/: ISO19848VersionsGenerator.cpp  ResourceGenerator.cpp  VisVersionsGenerator.cpp
cpp/src/internal/: EmbeddedResource.cpp  EmbeddedResource.h  GmodVersioningNode.h  GmodVersioningNode.inl  LocalIdParsingErrorBuilder.cpp
cpp/src/mqtt/: LocalId.cpp
cpp/src/transport/: ISO19848.cpp  ISO19848Dtos.cpp  ShipId.cpp
cpp/test/: CMakeLists.txt  TESTS_Codebook.cpp  TESTS_Codebooks.cpp  TESTS_Gmod.cpp  TESTS_GmodPath.cpp  TESTS_GmodPathQuery.cpp  TESTS_GmodVersioning.cpp  TESTS_GmodVersioningSmoke.cpp  TESTS_HashCompatibility.cpp  TESTS_ISOString.cpp  TESTS_ImoNumber.cpp  TESTS_LocalId.cpp  TESTS_LocalIdQuery.cpp  TESTS_Locations.cpp  TESTS_UniversalId.cpp  TestDataLoader.cpp  TestDataLoader.h
cpp/test/EmbeddedResources/: CMakeLists.txt  Tests_EmbeddedResources.cpp
cpp/test/EmbeddedSchemas/: CMakeLists.txt  Tests_EmbeddedSchemas.cpp
cpp/test/EmbeddedTestData/: CMakeLists.txt  Tests_EmbeddedTestData.cpp
cpp/test/SDK/: Tests_Codebook.cpp  Tests_CodebookNames.cpp  Tests_Codebooks.cpp  Tests_Gmod.cpp  Tests_GmodPath.cpp  Tests_GmodVersioning.cpp  Tests_GmodVersioning_Smoke.cpp  Tests_ImoNumber.cpp  Tests_LocalId.cpp  Tests_Locations.cpp  Tests_ParsingErrors.cpp  Tests_ShipId.cpp  Tests_UniversalId.cpp  Tests_VIS.cpp  Tests_VisVersions.cpp
cpp/test/hashing/: TESTS_HashingConsistencyGmodNode.cpp  TESTS_HashingConsistencyGmodPath.cpp  TESTS_HashingConsistencyImoNumber.cpp  TESTS_HashingConsistencyLocalId.cpp  TESTS_HashingConsistencyLocalIdBuilder.cpp  TESTS_HashingConsistencyLocations.cpp  TESTS_HashingConsistencyMetadataTags.cpp  TESTS_HashingConsistencyParsingErrors.cpp  TESTS_HashingConsistencyUniversalId.cpp  TESTS_HashingConsistencyUniversalIdBuilder.cpp
cpp/test/transport/: TESTS_DataChannelISOmessages.cpp  TESTS_DataChannelId.cpp  TESTS_ISO19848.cpp  TESTS_ShipId.cpp  TESTS_TimeSeriesISOmessages.cpp  TESTS_Transport_DataChannelISOmessages.cpp  TESTS_Transport_DataChannelId.cpp  TESTS_Transport_ISO19848.cpp  TESTS_Transport_ShipId.cpp  TESTS_Transport_TimeSeriesISOmessages.cpp
cpp/tools/: CMakeLists.txt  README.md  codebooks-cli.cpp  gmod-cli.cpp  json-validator-cli.cpp  localid-cli.cpp  locations-cli.cpp
(+174 files in other folders)
